<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="65dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="45dp"
    android:background="@color/White"
    tools:context="com.example.dancemarathon.SocialMedia" >
    
    <ImageView
        android:id="@+id/facebook"
        android:layout_width = "125dp"
		android:layout_height= "125dp"
        android:src="@drawable/facebook_icon"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
       	android:layout_marginTop="20dp"
        android:contentDescription="@string/facebook"
        android:tag="@string/facebook"
        android:onClick="openLink" />
    
    <ImageView
        android:id="@+id/twitter"
        android:layout_width = "125dp"
		android:layout_height= "125dp"
        android:src="@drawable/twitter_icon"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/twitter"
        android:tag="@string/twitter"
        android:onClick="openLink" />
        
    <ImageView
        android:id="@+id/instagram"
        android:layout_width = "125dp"
		android:layout_height= "125dp"
        android:src="@drawable/instagram_icon"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/instagram"
        android:tag="@string/instagram"
        android:onClick="openLink" />
            
    <ImageView
        android:id="@+id/youtube"
        android:layout_width = "125dp"
		android:layout_height= "125dp"
        android:src="@drawable/youtube_icon"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true" 
        android:contentDescription="@string/youtube"
        android:tag="@string/youtube"
    	android:onClick="openLink" />

</RelativeLayout>
