<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context="com.example.dancemarathon.HomeFragment" >
    
    <!-- Heading -->
    <ImageView android:id="@+id/dance_marathon_header_image"
        android:src="@drawable/countdown"
        android:contentDescription="@string/dance_marathon"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="-25dp"
        android:layout_marginBottom="-25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>
    
    <!-- Header Text -->
    <TextView
        android:id="@+id/header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textSize="16sp"
        android:textColor="@color/dm_blue_primary"
        android:gravity="center"
        android:layout_below="@+id/dance_marathon_header_image"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="40dp" 
        android:layout_centerHorizontal="true"/>

    <!-- Announcements -->
<<<<<<< HEAD

    <TextView
        android:id="@+id/announcement_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/header_text"
        android:layout_marginTop="10dp"
        android:text="@string/announcements"
        android:textColor="@color/dm_orange_primary"
        android:textSize="22sp"
        android:textStyle="bold" />
    
   <ListView
       android:id="@+id/announcements_list"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />
        
        <!-- DM Webpage Button -->
	<Button android:id="@+id/website"
	    android:background="@color/dm_blue_primary"
	    android:textColor="@color/White"
	    android:layout_width="@dimen/homepage_button_width"
        android:layout_height="@dimen/homepage_button_height"
	    android:text="@string/website"
	    android:textSize="@dimen/homepage_button_textsize"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:tag="http://www.floridadm.org/"
        android:onClick="openLink" /> 

    <!-- Game Button -->
    <Button android:id="@+id/game"
=======
	<RelativeLayout
	    android:id="@+id/announcements_section"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/header_text">
	    <TextView
	        android:id="@+id/announcements_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:text="@string/announcements"
	        android:textColor="@color/dm_orange_primary"
	        android:textSize="22sp"
	        android:textStyle="bold" />  
	    
	    <ListView
	       android:id="@+id/announcements_list"
	       android:layout_width="wrap_content"
	       android:layout_height="@dimen/announcements_list_height"
	       android:layout_below="@+id/announcements_title"/>
   </RelativeLayout>
   
   <!-- Game Button -->
    <Button 
        android:id="@+id/game"
>>>>>>> FETCH_HEAD
        android:background="@color/dm_blue_primary"
        android:textColor="@color/White"
        android:layout_width="@dimen/homepage_button_width"
        android:layout_height="@dimen/homepage_button_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/game"
        android:textSize="@dimen/homepage_button_textsize"
        android:tag="http://www.google.com/"
        android:onClick="openLink" />
    
        <!-- DM Webpage Button -->
	<Button 
	    android:id="@+id/website"
	    android:layout_width="@dimen/homepage_button_width"
        android:layout_height="@dimen/homepage_button_height"
        android:layout_marginBottom="10dp"
        android:layout_alignTop="@+id/game"
        android:layout_centerHorizontal="true"
	    android:text="@string/website"
	    android:textSize="@dimen/homepage_button_textsize"
	    android:textColor="@color/White"
	    android:background="@color/dm_blue_primary"
        android:tag="http://www.floridadm.org/"
        android:onClick="openLink" /> 

    <!-- Donate Button -->
    <Button android:id="@+id/donate"
        android:background="@color/dm_blue_primary"
        android:textColor="@color/White"
        android:layout_width="@dimen/homepage_button_width"
        android:layout_height="@dimen/homepage_button_height"
        android:layout_alignTop="@+id/game"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/donate"
        android:textSize="@dimen/homepage_button_textsize"
        android:tag="http://www.google.com"
        android:onClick="openLink" />
        
</RelativeLayout>
