<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.dancemarathon.LoginFragment">
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="30dp">
    

  <TextView 
      android:id="@+id/login_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="15dp"
      android:layout_marginBottom="20dp"
      android:layout_centerHorizontal="true"
      android:text="@string/login_title"
      android:textSize="20sp"
      android:textColor="@color/dm_orange_primary"/>
  
  <TextView 
        android:id="@+id/username_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_field"
        android:textSize="16sp"
        android:textColor="@color/White"
        android:paddingLeft="7dp"
        android:paddingStart="7dp"
        android:layout_below="@+id/login_title"
        android:background="@color/dm_blue_primary"
        />
    
    <EditText
        android:id="@+id/username_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username_label"
        android:layout_alignStart="@+id/username_label"
        android:layout_below="@+id/username_label"
        android:textColor="@color/Black"
        />
    
    <TextView 
        android:id="@+id/password_label"
        android:text="@string/password_field"
        android:textSize="16sp"
        android:textColor="@color/White"
        android:paddingLeft="7dp"
        android:paddingStart="7dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_field"
        android:layout_alignLeft="@+id/username_label"
        android:layout_alignStart="@+id/username_label"
        android:background="@color/dm_blue_primary"/>
    
    <EditText
        android:id="@+id/password_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username_label"
        android:layout_alignStart="@+id/username_label"
        android:layout_below="@+id/password_label"
        android:textColor="@color/Black"
        android:inputType="textPassword"
        />
	
     <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/login_button_text"
        android:textColor="@color/White"
        android:background="@color/dm_blue_primary"/>
     
     <ProgressBar 
        android:id="@+id/login_loading_wheel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateOnly="true"
        android:layout_below="@+id/password_field"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

</RelativeLayout>
</RelativeLayout>
