<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/White"
    tools:context="com.example.dancemarathon.EventFragment" >

    <!-- Event page title -->
    <TextView
        android:id="@+id/event_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/dm_blue_primary" 
        android:text=""/>
    
    <!-- Event page description -->
    <TextView
        android:id="@+id/event_page_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/event_page_title"
        android:layout_alignLeft="@+id/event_page_title"
        android:layout_alignStart="@+id/event_page_title"
        android:textSize="14sp"
        android:text=""/>
    
     <!-- Event page start time label -->

	 <TextView
	     android:id="@+id/event_page_stime_label"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_below="@+id/event_page_desc"
	     android:text="@string/start_time_label"
	     android:textSize="12sp" />
	 
	 <!-- Event page start time-->
	 <TextView
        android:id="@+id/event_page_stime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_toRightOf="@+id/event_page_stime_label"
        android:layout_toEndOf="@+id/event_page_stime_label"
        android:layout_alignTop="@+id/event_page_stime_label"
        android:textSize="12sp"
        android:text=""/>
	 
	 <!-- Event page end time label -->
	 <TextView
        android:id="@+id/event_page_etime_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/event_page_stime_label"
        android:layout_alignLeft="@+id/event_page_stime_label"
        android:layout_alignStart="@+id/event_page_stime_label"
        android:textSize="12sp"
        android:text="@string/end_time_label"/>
	 
	 <!-- Event page end time -->
	 <TextView
        android:id="@+id/event_page_etime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_toRightOf="@+id/event_page_etime_label"
        android:layout_toEndOf="@+id/event_page_etime_label"
        android:layout_alignTop="@+id/event_page_etime_label"
        android:textSize="12sp"
        android:text=""/>
	 
	 <!-- Event page location label-->
	 <TextView
        android:id="@+id/event_page_loc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/event_page_etime_label"
        android:layout_alignLeft="@+id/event_page_stime_label"
        android:layout_alignStart="@+id/event_page_stime_label"
        android:textSize="12sp"
        android:text="@string/location_label"/>
	 
	 <!-- Event page location -->
	 <TextView
        android:id="@+id/event_page_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/event_page_loc_label" 
        android:layout_toEndOf="@+id/event_page_loc_label"
        android:layout_alignTop="@+id/event_page_loc_label"
        android:textSize="12sp"
        android:text=""/>
	 
</RelativeLayout>
